<resources>
    <string name="app_name">Scooter Sharing</string>
    <string name="info">Info:</string>
    <string name="name">Name:</string>
    <string name="where">Where:</string>
    <string name="location">Location:</string>
    <string name="update_ride">Update scooter</string>
    <string name="start_ride">Start ride</string>
    <string name="edit_ride">Edit ride</string>
    <string name="list_rides">List rides</string>
    <string name="active">Active:</string>
    <string name="toggle_active">Toggle active</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="signout">Sign out</string>
    <string name="content_description_favorite">Favorite</string>
    <string name="content_description_search">Search</string>
    <string name="content_description_signout">Sign out</string>
    <string name="content_description_add">Add</string>
    <string name="add_ride">Add ride</string>
    <string name="delete_ride">Delete ride</string>
    <string name="end_ride">End ride</string>
    <string name="view_previous_rides">View previous rides</string>
    <string name="save_profile">Save profile</string>
    <string name="email">Email:</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="logout_dialog">Do you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="start_ride_dialog">Do you want to start the ride?</string>
    <string name="end_ride_dialog">Do you want to end the ride?</string>
    <string name="open_scanner">Open scanner</string>
    <string name="open_scooter_details_dialog">Open scooter details?</string>
    <string name="code_scanner">Code Scanner</string>
    <string name="scan_result">Scan result</string>
    <string name="scanner_error">Scanner error: %s</string>
    <string name="close">Close</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="update_picture">Update picture</string>
    <string name="edit_scooter_name">Edit scooter name</string>
    <string name="balance">Balance:</string>
    <string name="balanceWithCurrency">Balance: %d DKK</string>
    <string name="scooter">Scooter</string>
    <string name="user_updated">User successfully updated!</string>
    <string name="ride_updated">Ride successfully updated!</string>
    <string name="no_empty_values">Values cannot be empty!</string>
    <string name="invalid_balance">Balance must be a number!</string>
    <string name="ride_ended_details">Ride ended with price %d DKK and duration %s. View details in rental history</string>
    <string name="permission_not_granted">Permissions not granted by the user</string>
    <string name="photo_capture_success">Photo capture succeeded</string>
    <string name="rental_list_empty">Rental history is empty!</string>
    <string name="battery">Battery:</string>
    <string name="battery_used">Battery used:</string>
    <string name="duration">Duration:</string>
    <string name="price">Price:</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="ride">Ride:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="location_time">Location time:</string>
    <string name="loading">loading...</string>
</resources>